# search_by_document_texts

./: .gitignore  Makefile  README.md  pyproject.toml
deploy/: .env.dev.example  .env.prod.example  Dockerfile  dev.docker-compose.yml  docker-compose.yml
search_by_document_texts/api/: main.py  routes.py
search_by_document_texts/api/di/: di.py  provides.py  stubs.py
search_by_document_texts/api/v1/: document.py  dto.py
search_by_document_texts/config/: alembic.ini  settings.py
search_by_document_texts/infrastructure/store/elasticsearch/: connect.py  register_index.py
search_by_document_texts/infrastructure/store/elasticsearch/gateways/: __init__.py  base.py  doc_to_search.py
search_by_document_texts/infrastructure/store/sqlalchemy/: connect.py
search_by_document_texts/infrastructure/store/sqlalchemy/alembic/: env.py
search_by_document_texts/infrastructure/store/sqlalchemy/gateways/: __init__.py  base.py  commiter.py  document.py  rubric.py
search_by_document_texts/infrastructure/store/sqlalchemy/models/: __init__.py  document.py
search_by_document_texts/presentation/api/: main.py  routes.py
search_by_document_texts/presentation/api/di/: di.py  stubs.py
search_by_document_texts/presentation/api/v1/: document.py  dto.py
search_by_document_texts/presentation/cli/: create_es_indexs.py  dump_data.py
search_by_document_texts/сore/: dto.py  entities.py  protocols.py
search_by_document_texts/сore/handlers/: __init__.py  base.py  create.py  delete.py  search.py
tests/functional_tests/: conftest.py  documents.py
(+4 files in other folders)
